layout bugfix in admin mode added javadoc comments

--- a/modules/custom/balanceonline_eventform/eventform_rsvp.css
+++ b/modules/custom/balanceonline_eventform/eventform_rsvp.css
@@ -7,3 +7,6 @@
 	padding-bottom:4px;
 	overflow:hidden;
 }
+.og-audience{
+    width:100% !important;
+}
